# docs/swagger.json
@@ -98,29 +98,6 @@
                 "responses": {}
             }
         },
-        "/campaign": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Campaigns"
-                ],
-                "summary": "Create a campaign",
-                "parameters": [
-                    {
-                        "description": "Campaign Details",
-                        "name": "models.Campaign",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Campaign"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
         "/campaign/": {
             "get": {
                 "consumes": [
@@ -142,7 +119,7 @@
                 "responses": {}
             }
         },
-        "/campaign/quiz/template": {
+        "/campaign/a": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -150,7 +127,30 @@
                 "tags": [
                     "Campaigns"
                 ],
-                "summary": "Create a quiz template",
+                "summary": "Create a campaign [FOR ADMIN]",
+                "parameters": [
+                    {
+                        "description": "Campaign Details",
+                        "name": "models.Campaign",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Campaign"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/campaign/a/quiz/template": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Campaigns"
+                ],
+                "summary": "Create a quiz template [FOR ADMIN]",
                 "parameters": [
                     {
                         "description": "Campaign Details",
@@ -159,6 +159,36 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.QuizTemplate"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/campaign/participate": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Campaigns"
+                ],
+                "summary": "Create a campaign",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Campaign ID",
+                        "name": "campaignParticipationBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/campaigns.campaignParticipationBody"
                         }
                     }
                 ],
@@ -321,6 +351,14 @@
                 }
             }
         },
+        "campaigns.campaignParticipationBody": {
+            "type": "object",
+            "properties": {
+                "CampaignId": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Campaign": {
             "type": "object",
             "required": [
@@ -332,6 +370,12 @@
                 "TotalAirdrop"
             ],
             "properties": {
+                "ArticleUrls": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "CurrentAirdrop": {
                     "type": "integer"
                 },
@@ -341,20 +385,32 @@
                 "Name": {
                     "type": "string"
                 },
-                "Quizzes": {
+                "QuizIds": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
                 },
+                "Quizzes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.QuizTemplate"
+                    }
+                },
                 "RequiredFlaq": {
                     "type": "integer"
+                },
+                "TaskType": {
+                    "type": "string"
                 },
                 "TickerName": {
                     "type": "string"
                 },
                 "TotalAirdrop": {
                     "type": "integer"
+                },
+                "YTVideoUrl": {
+                    "type": "string"
                 },
                 "_id": {
                     "type": "string"
