# models/models.go
@@ -4,24 +4,31 @@ import (
 	"context"
 	"errors"
 	"fmt"
+	"log"
+	"strings"
 	"time"
 
+	"github.com/d3fkon/gin-flaq/configs"
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 	"go.mongodb.org/mongo-driver/mongo"
 )
 
+const (
+	Users                  = "users"
+	Payments               = "payments"
+	QuizTemplates          = "quiz_templates"
+	QuizEntries            = "quiz_entries"
+	Campaigns              = "campaigns"
+	CampaignParticipations = "campaign_participations"
+)
+
 type Models interface {
-	User | Campaign | QuizEntry | QuizTemplate | Payment
 }
 
-const (
-	Users         = "users"
-	Payments      = "payments"
-	QuizTemplates = "quiz_templates"
-	QuizEntries   = "quiz_entries"
-	Campaigns     = "campaigns"
-)
+type Query interface {
+	bson.D | bson.M
+}
 
 // Cannot use utils due to circular dependency
 func GetContext() (context.Context, context.CancelFunc) {
@@ -36,19 +43,27 @@ func ObjId(s string) primitive.ObjectID {
 }
 
 type Collection[A Models] struct {
-	I mongo.Collection // Instance of the collection
+	I    mongo.Collection // Instance of the collection
+	name string
 }
 
-func (c Collection[M]) FindOneById(id string, model interface{}) error {
+func makeModel[A Models](name string) *Collection[A] {
+	return &Collection[A]{
+		I:    *configs.GetCollection(name),
+		name: name,
+	}
+}
+
+func (c Collection[M]) FindOneById(id string, model *M) error {
 	ctx, cancel := GetContext()
 	defer cancel()
-	if err := c.I.FindOne(ctx, bson.M{"_id": id}).Decode(model); err != nil {
+	if err := c.I.FindOne(ctx, bson.M{"_id": ObjId(id)}).Decode(model); err != nil {
 		return errors.New("Cannot find document")
 	}
 	return nil
 }
 
-func (c Collection[M]) FindByIdAndUpdate(idHex string, update bson.M, updated interface{}) error {
+func (c Collection[M]) FindByIdAndUpdate(idHex string, update bson.M, updated *M) error {
 	ctx, cancel := GetContext()
 	defer cancel()
 	if err := c.I.FindOneAndUpdate(ctx, bson.M{"_id": ObjId(idHex)}, update).Decode(updated); err != nil {
@@ -58,7 +73,7 @@ func (c Collection[M]) FindByIdAndUpdate(idHex string, update bson.M, updated in
 	return nil
 }
 
-func (c Collection[M]) FindOneAndUpdate(find bson.M, update bson.M, updated interface{}) error {
+func (c Collection[M]) FindOneAndUpdate(find bson.M, update bson.M, updated *M) error {
 	ctx, cancel := GetContext()
 	defer cancel()
 	if err := c.I.FindOneAndUpdate(ctx, find, update).Decode(updated); err != nil {
@@ -75,7 +90,8 @@ func (c Collection[M]) New(document M) error {
 	return err
 }
 
-func (c Collection[M]) FindMany(bson bson.M, elem interface{}) error {
+// Find many. Basically send a bson.M or bson.D query
+func (c Collection[M]) FindMany(bson interface{}, elem *[]M) error {
 	ctx, cancel := GetContext()
 	defer cancel()
 	cursor, err := c.I.Find(ctx, bson)
@@ -83,6 +99,51 @@ func (c Collection[M]) FindMany(bson bson.M, elem interface{}) error {
 		return err
 	}
 	if err := cursor.All(ctx, elem); err != nil {
+		return err
+	}
+	return nil
+}
+
+type Populate struct {
+	LocalField, ForeignModel, As string
+}
+
+func (c Collection[M]) FindManyPopulate(matchQuery bson.D, populate Populate, elem *[]M) error {
+	ctx, cancel := GetContext()
+	defer cancel()
+
+	match := bson.D{{Key: "$match", Value: matchQuery}}
+	lookup := bson.D{{Key: "$lookup", Value: bson.D{{
+		Key:   "from",
+		Value: populate.ForeignModel,
+	}, {
+		Key:   "localField",
+		Value: populate.LocalField,
+	}, {
+		Key:   "foreignField",
+		Value: "_id",
+	}, {
+		Key:   "as",
+		Value: populate.As,
+	}}}}
+
+	unwind := bson.D{{
+		Key: "$unwind",
+		Value: bson.D{{
+			Key:   "path",
+			Value: strings.Join([]string{"$", populate.As}, ""),
+		}, {
+			Key:   "preserveNullAndEmptyArrays",
+			Value: false,
+		}},
+	}}
+
+	cursor, err := c.I.Aggregate(ctx, mongo.Pipeline{match, lookup, unwind})
+	if err != nil {
+		return err
+	}
+	if err := cursor.All(ctx, elem); err != nil {
+		log.Println(err)
 		return err
 	}
 	return nil
