# modules/campaigns/campaign_controller.go
@@ -8,47 +8,51 @@ import (
 )
 
 type Controller struct {
-	M modules.Controller
+	modules.Controller
 }
 
 func Setup(g *gin.Engine) {
-	c := Controller{M: modules.Controller{}}
+	c := Controller{}
 	router := g.Group("/campaign")
 	{
-		router.POST("/", c.createCampaign)
-		router.POST("/quiz/template", c.createQuizTemplate)
-		router.POST("/quiz/create", c.createQuizForCampaign)
-		router.POST("/evaluate", c.evaluateQuiz)
+		router.POST("/a/", c.createCampaign)
+		router.POST("/a/quiz/template", c.createQuizTemplate)
+		router.POST("/a/quiz/create", c.createQuizForCampaign)
 		authenticated := router.Group("/")
 		authenticated.Use(middleware.UserAuth())
-		authenticated.GET("/", c.getAllCampaignsForUser)
+		{
+			authenticated.GET("/", c.getAllCampaignsForUser)
+			authenticated.GET("/quiz")
+			authenticated.POST("/participate", c.participate)
+			authenticated.POST("/evaluate", c.evaluateQuiz)
+		}
 	}
 }
 
 // Create a campaign
-// @Router    /campaign [post]
-// @Summary   Create a campaign
+// @Router    /campaign/a [post]
+// @Summary   Create a campaign [FOR ADMIN]
 // @Tags      Campaigns
 // @Accept    application/json
 // @Param     models.Campaign body  models.Campaign true  "Campaign Details"
 func (c Controller) createCampaign(ctx *gin.Context) {
 	body := models.Campaign{}
-	c.M.BindBody(ctx, &body)
+	c.BindBody(ctx, &body)
 	CreateCampaign(&body)
-	c.M.HandleResponse(ctx, body)
+	c.HandleResponse(ctx, body)
 }
 
 // Create a quiz template to be used
-// @Router    /campaign/quiz/template [post]
-// @Summary   Create a quiz template
+// @Router    /campaign/a/quiz/template [post]
+// @Summary   Create a quiz template [FOR ADMIN]
 // @Tags      Campaigns
 // @Accept    application/json
 // @Param     models.QuizTemplate body  models.QuizTemplate true  "Campaign Details"
 func (c Controller) createQuizTemplate(ctx *gin.Context) {
 	body := models.QuizTemplate{}
-	c.M.BindBody(ctx, &body)
+	c.BindBody(ctx, &body)
 	CreateQuizTemplate(&body)
-	c.M.HandleResponse(ctx, body)
+	c.HandleResponse(ctx, body)
 }
 
 // Get all campaigns for a user
@@ -58,12 +62,35 @@ func (c Controller) createQuizTemplate(ctx *gin.Context) {
 // @Tags      Campaigns
 // @Accept    application/json
 func (c Controller) getAllCampaignsForUser(ctx *gin.Context) {
-	user := c.M.ReqUser(ctx)
-	c.M.HandleResponse(ctx, GetAllCampaigns(user))
+	user := c.ReqUser(ctx)
+	res := GetCampaignParticipationForUser(user)
+	c.HandleResponse(ctx, res)
 }
+
+// Get a quiz entry for a campaign, for a user so that quiz can't be attempted again
+func (c Controller) getQuizEntriesForCampaign(ctx *gin.Context) {}
 
 // Create a quiz for a user, for a campaign
 func (c Controller) createQuizForCampaign(ctx *gin.Context) {}
 
 // Evaluate a given quiz
 func (c Controller) evaluateQuiz(ctx *gin.Context) {}
+
+type campaignParticipationBody struct {
+	CampaignId string `json:"CampaignId"`
+}
+
+// Participate in campaign
+// @Router    /campaign/participate [post]
+// @Summary   Create a campaign
+// @Tags      Campaigns
+// @param    Authorization  header  string  true  "Authorization"
+// @Accept    application/json
+// @Param     campaignParticipationBody body  campaignParticipationBody true  "Campaign ID"
+func (c Controller) participate(ctx *gin.Context) {
+	body := campaignParticipationBody{}
+	user := c.ReqUser(ctx)
+	c.BindBody(ctx, &body)
+	res := ParticipateInCampaign(body.CampaignId, user)
+	c.HandleResponse(ctx, res)
+}
